apps/base/searxng/searxng.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng-system
  labels:
    networking.tinyrack.net/isolation: enabled
