apps/base/searxng/searxng.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-service
  namespace: searxng-system
spec:
  selector:
    app: searxng
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
