apps/base/searxng/searxng.traefik.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: route-searxng
  namespace: traefik-external-system
  labels:
    networking.tinyrack.net/owner: searxng
  annotations:
    networking.tinyrack.net/hosts: search.winetree94.com
spec:
  description: Allow the search.winetree94.com route
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sService:
            namespace: searxng-system
            serviceName: searxng-service
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
